<resources>
    <string name="app_name">MDWechat</string>
    <string name="text_category_switch">开关</string>
    <string name="key_hook_switch">hookSwitch</string>
    <string name="key_color_primary">colorPrimary</string>
    <string name="text_hook_switch">总开关</string>
    <string name="text_settings">设置</string>
    <string name="text_color_primary">主色</string>
    <string name="text_settings_info">修改之后停止微信重启生效.</string>
    <string name="text_donate">捐赠(支付宝)</string>
    <string name="text_donate_wechat">捐赠(微信)</string>
    <string name="key_donate">key_donate</string>
    <string name="text_category_settings">设置</string>
    <string name="key_hook_actionbar">key_hook_actionbar</string>
    <string name="text_hook_actionbar">ActionBar变色</string>
    <string name="key_hook_avatar">key_hook_avatar</string>
    <string name="text_hook_avatar">圆角头像</string>
    <string name="key_hook_ripple">key_hook_ripple</string>
    <string name="text_hook_ripple">按下波纹效果</string>
    <string name="key_hook_float_button">key_hook_float_button</string>
    <string name="text_hook_float_button">悬浮按钮</string>
    <string name="key_hook_search">key_hook_search</string>
    <string name="text_hook_search">搜索</string>
    <string name="key_hook_tab">key_hook_tab</string>
    <string name="text_hook_tab">TabLayout</string>
    <string name="key_hook_menu_game">key_hook_menu_game</string>
    <string name="text_hook_menu_game">隐藏游戏</string>
    <string name="key_hook_menu_shop">key_hook_menu_shop</string>
    <string name="text_hook_menu_shop">隐藏购物</string>
    <string name="key_is_play">key_is_play</string>
    <string name="text_is_play">我是Play版</string>
    <string name="text_info_is_play">Play版需要手动设置,重启生效</string>
    <string name="key_hide_launcher_icon">key_hide_launcher_icon</string>
    <string name="text_hide_launcher_icon">隐藏应用图标</string>
    <string name="text_hide_launcher_icon_info">隐藏后你可以从 Xposed 模块界面进入本模块</string>
    <string name="key_feedback">key_feedback</string>
    <string name="text_feedback">去酷安反馈</string>
    <string name="text_scan_qrcode">扫一扫</string>
    <string name="text_money">收付款</string>
    <string name="text_chat_group">群聊</string>
    <string name="text_friend_add">添加好友</string>
    <string name="text_app_thank">感谢</string>
    <string name="text_app_thank_content">感谢 hzknm@coolapk 设计的 Logo,感谢 Gh0u1L5@github 开源的微信巫师,感谢 weishu 对代码的贡献,感谢 @装睡 提供的精神支持</string>
    <string name="key_hook_bubble_tint">key_hook_bubble_tint</string>
    <string name="text_hook_bubble_tint">气泡着色</string>
    <string name="text_hook_menu_qrcode">隐藏扫一扫</string>
    <string name="key_hook_menu_qrcode">key_hook_menu_qrcode</string>
    <string name="key_hook_menu_shake">key_hook_menu_shake</string>
    <string name="text_hook_menu_shake">隐藏摇一摇</string>
    <string name="key_hook_menu_near">key_hook_menu_near</string>
    <string name="text_hook_menu_near">隐藏附近的人</string>
    <string name="text_common_settings">通用设置</string>
    <string name="key_color_ripple">key_color_ripple</string>
    <string name="text_color_ripple">波纹颜色</string>
    <string name="text_main_settings">主界面设置</string>
    <string name="text_hook_float_button_info"></string>
    <string name="key_hook_hide_actionbar">key_hook_hide_actionbar</string>
    <string name="text_hook_hide_actionbar">隐藏 ActionBar</string>
    <string name="key_hook_float_button_move">key_hook_float_button_move</string>
    <string name="text_hook_float_button_move_info">在某些机型上(魅族等),浮动按钮,显示异常,可以打开移动选项.</string>
    <string name="text_hook_float_button_move">我想移动浮动按钮</string>
    <string name="text_conversation_settings">聊天列表页设置</string>
    <string name="key_color_conversation_top">key_color_conversation_top</string>
    <string name="text_color_conversation_top">置顶底色</string>
    <string name="text_discover_settings">发现页设置</string>
    <string name="key_hook_menu_sns">key_hook_menu_sns</string>
    <string name="text_hook_menu_sns">隐藏朋友圈</string>
    <string name="key_hook_menu_appbrand">key_hook_menu_appbrand</string>
    <string name="text_hook_menu_appbrand">隐藏小程序</string>
    <string name="text_chat_settings">聊天页设置</string>
    <string name="key_hook_bubble">key_hook_bubble</string>
    <string name="text_hook_bubble">自定义气泡</string>
    <string name="text_hook_bubble_info">必须是.9图,自定义配置参见/sdcard/mdwechat/config/view/bubble_readme.txt</string>
    <string name="text_hook_bubble_tint_info">可以修改气泡颜色</string>
    <string name="key_hook_bubble_tint_left">key_hook_bubble_tint_left</string>
    <string name="text_hook_bubble_tint_left">左边气泡颜色</string>
    <string name="key_hook_bubble_tint_right">key_hook_bubble_tint_right</string>
    <string name="text_hook_bubble_tint_right">右边气泡颜色</string>
    <string name="key_hook_chat_text_color_left">key_hook_chat_text_color_left</string>
    <string name="text_hook_chat_text_color_left">左边文字颜色</string>
    <string name="key_hook_chat_text_color_right">key_hook_chat_text_color_right</string>
    <string name="text_hook_chat_text_color_right">右边文字颜色</string>
    <string name="key_reset_wechat_config">key_reset_wechat_config</string>
    <string name="text_reset_wechat_config_info">微信版本适配文件,更新版本或失败请重置,配置文件在/sdcard/mdwechat/config/wechat/目录下,谨慎修改</string>
    <string name="text_reset_wechat_config">重置微信版本适配文件</string>
    <string name="key_reset_view_config">key_reset_view_config</string>
    <string name="text_reset_view_config">重置控件配置文件</string>
    <string name="text_reset_view_config_info">目前只有悬浮按钮配置文件,如果你改坏了/不生效,请重置,配置文件在/sdcard/mdwechat/config/view/目录下</string>
    <string name="key_reset_icon_config">key_reset_icon_config</string>
    <string name="text_reset_icon_config">重置图标资源</string>
    <string name="text_reset_icon_config_info">如果你替换图标效果不理想/无效,请重置,目录在/sdcard/mdwechat/icon/目录下,替换图标尽量保证尺寸一致,否则可能显示会有问题</string>
    <string name="msg_reset_ok">重置成功,重启生效,可手动去该目录查看</string>
    <string name="key_hook_statusbar_transparent">key_hook_statusbar_transparent</string>
    <string name="text_hook_statusbar_transparent">状态栏全透明</string>
    <string name="msg_kill_wechat">请手动强行停止微信,再打开微信看效果.</string>
    <string name="key_hook_tab_elevation">key_hook_tab_elevation</string>
    <string name="text_hook_tab_elevation">TabLayout阴影</string>
    <string name="key_hook_hide_wx_tab">key_hook_hide_wx_tab</string>
    <string name="text_hook_hide_wx_tab">隐藏微信底栏</string>
    <string name="key_feedback_email">key_feedback_email</string>
    <string name="text_feedback_email">给我发邮件反馈</string>
    <string name="text_feedback_email_info">blanke.master+mdwechat@gmail.com,反馈问题请描述问题并提供日志,不定时检查回复</string>
    <string name="key_github">key_github</string>
    <string name="text_github">GitHub地址</string>
    <string name="text_github_info">可以给个star嘛</string>
    <string name="key_hook_hide_wx_tab_2">key_hook_hide_wx_tab_2</string>
    <string name="text_hook_hide_wx_tab_2">隐藏发现页面</string>
    <string name="key_hook_hide_wx_tab_3">key_hook_hide_wx_tab_3</string>
    <string name="text_hook_hide_wx_tab_3">隐藏设置页面</string>
    <string name="key_hook_remove_appbrand">key_hook_remove_appbrand</string>
    <string name="text_hook_remove_appbrand">移除顶部下拉小程序</string>
    <string name="key_hook_remove_appbrand_summary">该功能最低支持微信版本为 6.6.2</string>
    <string name="key_hook_remove_foot_view">key_hook_remove_foot_view</string>
    <string name="text_hook_remove_foot_view">修复消息列表背景图显示不完整(底部空白)</string>
    <string name="text_hook_remove_foot_view_summary">当消息列表显示不超过一屏时背景图会显示不完整,最低支持微信版本 6.6.1,如显示异常,尝试关闭此项</string>
    <string name="msg_permission_fail">请授予必要的存储权限,存储目录在 /sdcard/mdwechat 下.</string>
    <string name="key_hook_conversation_bg">key_hook_conversation_bg</string>
    <string name="title_hook_conversation_bg">背景图</string>
    <string name="key_hook_main_bg">key_hook_main_bg</string>
    <string name="key_hook_main_textcolor">key_hook_main_textcolor</string>
    <string name="text_hook_main_textcolor">主界面颜色</string>
    <string name="key_main_textcolor_title">key_main_textcolor_title</string>
    <string name="text_main_textcolor_title">主界面标题颜色</string>
    <string name="key_main_textcolor_content">key_main_textcolor_content</string>
    <string name="text_main_textcolor_content">主界面内容颜色</string>
    <string name="text_settings_debug">调试</string>
    <string name="key_hook_log">key_hook_log</string>
    <string name="text_hook_log">日志记录</string>
    <string name="text_hook_log_info">打开日志开关会在/sdcard/mdwechat/logs 下生成日志文件，谨慎打开，会导致运行变卡顿</string>
    <string name="key_generate_wechat_config">key_generate_view_config</string>
    <string name="text_generate_wechat_config">生成本机微信配置文件</string>
    <string name="text_generate_wechat_config_info">根据当前安装微信版本自动生成适配文件，第一次使用/升级微信版本必须重新生成！！</string>
    <string name="msg_wechat_notfound">本机未安装微信，生成失败</string>
    <string name="text_confirm"> 确定</string>
    <string name="key_donate_wechat">key_donate_wechat</string>
    <string name="key_download_wechat_config">key_download_wechat_config</string>
    <string name="text_download_wechat_config">下载共享的微信配置文件</string>
    <string name="text_download_wechat_config_info">上面生成失败的可以尝试下载，配置文件作者维护，更新可能不及时，欢迎贡献配置文件(发邮件给作者)</string>
    <string name="text_wechat_config_settings">微信适配文件</string>
    <string name="text_feedback_donate_settings">反馈和捐赠</string>
    <string name="text_about_settings">关于</string>
    <string name="key_feedback_wechat">key_feedback_wechat</string>
    <string name="text_feedback_wechat">微信交流群</string>
    <string name="text_feedback_group">加入交流群</string>
    <string name="text_feedback_wechat_info"></string>
    <string name="text_feedback_group_info">点击查看交流群</string>
    <string name="text_help_settings">帮助和教程</string>
    <string name="text_help_float_button">悬浮按钮</string>
    <string name="text_help_icon">图标</string>
    <string name="text_help_bubble">气泡</string>
    <string name="key_help_float_button">key_help_float_button</string>
    <string name="key_help_icon">key_help_icon</string>
    <string name="key_help_bubble">key_help_bubble</string>
    <string name="key_hook_night_mode">key_hook_night_mode</string>
    <string name="text_hook_night_mode">夜间模式(实验性,仅适用主界面)</string>
    <string name="text_app_tips">软件使用提示</string>
    <string name="text_app_desc">本软件请在微信的用户条款下使用，遵守相关法律和微信规定，使用本软件造成的一切后果，与软件和开发者无关，如对上述有异议或疑问，请立即卸载此软件！</string>
    <string name="text_app_donate">你已使用「MDWechat」%s，在使用过程中有任何问题欢迎加入微信群讨论。\n如果你觉得「MDWechat」很好用，是否愿意支持下作者，让我更有动力完善维护这个软件呢？</string>
    <string name="text_app_know">我已知晓</string>
    <string name="key_feedback_group">key_feedback_group</string>
</resources>
