<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <SwitchPreference
        android:defaultValue="true"
        android:key="@string/key_hook_switch"
        android:summary="@string/text_settings_info"
        android:title="@string/text_hook_switch" />

    <SwitchPreference
        android:defaultValue="false"
        android:key="@string/key_is_play"
        android:summary="@string/text_info_is_play"
        android:title="@string/text_is_play" />

    <SwitchPreference
        android:defaultValue="false"
        android:key="@string/key_hide_launcher_icon"
        android:title="@string/text_hide_launcher_icon" />

    <com.jaredrummler.android.colorpicker.ColorPreference
        android:defaultValue="@color/colorPrimary"
        android:key="@string/key_color_primary"
        android:title="@string/text_color_primary"
        app:cpv_colorPresets="@array/colors"
        app:cpv_showAlphaSlider="true" />

    <Preference
        android:key="@string/key_donate"
        android:summary="@string/text_donate_info"
        android:title="@string/text_donate" />
    <PreferenceCategory
        android:dependency="@string/key_hook_switch"
        android:title="@string/text_category_settings">
        <SwitchPreference
            android:defaultValue="true"
            android:key="@string/key_hook_actionbar"
            android:title="@string/text_hook_actionbar" />
        <SwitchPreference
            android:defaultValue="true"
            android:key="@string/key_hook_avatar"
            android:title="@string/text_hook_avatar" />
        <SwitchPreference
            android:defaultValue="true"
            android:key="@string/key_hook_ripple"
            android:title="@string/text_hook_ripple" />
        <SwitchPreference
            android:defaultValue="true"
            android:key="@string/key_hook_float_button"
            android:title="@string/text_hook_float_button" />
        <SwitchPreference
            android:defaultValue="true"
            android:key="@string/key_hook_search"
            android:title="@string/text_hook_search" />
        <SwitchPreference
            android:defaultValue="true"
            android:key="@string/key_hook_tab"
            android:title="@string/text_hook_tab" />
        <SwitchPreference
            android:defaultValue="true"
            android:key="@string/key_hook_menu_game"
            android:title="@string/text_hook_menu_game" />
        <SwitchPreference
            android:defaultValue="true"
            android:key="@string/key_hook_menu_shop"
            android:title="@string/text_hook_menu_shop" />
    </PreferenceCategory>
</PreferenceScreen>